--- a/angular/src/account/login/login.component.html
+++ b/angular/src/account/login/login.component.html
@@ -57,41 +57,38 @@
   </div>
 </div> -->
 <div class="row">
-  <div class="col-5  sm:block ">
+  <div class="col-3 pic sm-block ">
     <img class="login-pic"
       src="https://optimize-portal.vercel.app/_next/image?url=%2F_next%2Fstatic%2Fmedia%2Flogin-banner.1fa296f1.png&w=3840&q=75">
 
   </div>
-  <div class="col-4 ">
+  <div class="col form-login ">
     <div class="login">
       <div [@routerTransition]>
         <img class="logo" src="https://optimize-portal.vercel.app/_next/static/media/login-logo.cbf5804c.svg">
         <br />
         <span class="title">Sign in to your account</span>
-        <form novalidate autocomplete="off" #loginForm="ngForm" (ngSubmit)="login()">
+        <form class="form-log" novalidate autocomplete="off" #loginForm="ngForm" (ngSubmit)="login()" > 
           <div class="form-group">
             <div class="input-group">
-              <input type="text" class="form-control" name="userNameOrEmailAddress"
+              <input type="text" class="form-control" name="userNameOrEmailAddress" 
                 [(ngModel)]="authService.authenticateModel.userNameOrEmailAddress" [placeholder]="'Email' | localize"
-                required maxlength="256" #userNameOrEmailAddressModel="ngModel" #userNameOrEmailAddressEl />
-
+                maxlength="256" #userNameOrEmailAddressModel="ngModel" #userNameOrEmailAddressEl 
+                required/>
             </div>
             <abp-validation-summary [control]="userNameOrEmailAddressModel" [controlEl]="userNameOrEmailAddressEl">
             </abp-validation-summary>
           </div>
           <div class="form-group">
             <div class="input-group">
-              <input type="password" class="form-control" name="password"
-                [(ngModel)]="authService.authenticateModel.password" [placeholder]="'Password' | localize" required
-                maxlength="32" #passwordModel="ngModel" #passwordEl />
-
+              <input type="password" class="form-control" name="password" 
+                [(ngModel)]="authService.authenticateModel.password" [placeholder]="'Password' | localize"
+                maxlength="32" #passwordModel="ngModel" #passwordEl 
+                required/>
             </div>
             <abp-validation-summary [control]="passwordModel" [controlEl]="passwordEl"></abp-validation-summary>
           </div>
           <div class="form-group row">
-            <div class="col-md-8">
-
-            </div>
             <div class="col-md-4">
               <button type="submit" class="btn btn-primary btn-block" [disabled]="!loginForm.form.valid || submitting">
                 {{ "Sign In" | localize }} <i class="bi bi-arrow-right"></i>
