--- a/angular/src/account/login/login.component.css
+++ b/angular/src/account/login/login.component.css
@@ -9,6 +9,7 @@ body {
     flex: 1 1 0%;
     display: flex;
     max-width: 100%;
+    justify-content: center;
 }
 
 .row {
@@ -103,7 +104,7 @@ span.title {
     div.sm-block{
         display: none;
     }
-    
+
 }
 
 .row {
