--- a/angular/src/app/update-image-modal/update-image-modal.component.html
+++ b/angular/src/app/update-image-modal/update-image-modal.component.html
@@ -1,64 +1,78 @@
+<div bsModal #createOrEditModal="bs-modal" class="modal fade" tabindex="-1" role="dialog"
+    aria-labelledby="createOrEditModal" aria-hidden="true" [config]="{backdrop: 'static'}">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <form *ngIf="active" #Form="ngForm" novalidate (ngSubmit)="save()" autocomplete="off">
 
-<div
-bsModal
-#createOrEditModal="bs-modal"
-class="modal fade"
-tabindex="-1"
-role="dialog"
-aria-labelledby="createOrEditModal"
-aria-hidden="true"
-[config]="{backdrop: 'static'}"
->
-<div class="modal-dialog">
-    <div class="modal-content">
-        <form *ngIf="active" #Form="ngForm" novalidate (ngSubmit)="save()" autocomplete="off">
+                <div class="modal-header">
+                    <h4 class="modal-title">
+                        <span>{{l("Update Avatar")}}</span>
+                    </h4>
+                    <button type="button" class="close" (click)="close()" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <label>{{l("Avatar")}}</label>
+                            <div class="form-group form-md-line-input form-md-floating-label no-hint">
+                                <input type="text" name="image" class="form-control" [ngClass]="{'edited':user.image}"
+                                    [(ngModel)]="user.image">
+                                <div class="text-center" [style]="'margin-top : 10px'">
+                                    <input class="form-control" type="file" (change)="onFileSelected($event)">
 
-            <div class="modal-header">
-                <h4 class="modal-title">
-                    <span>{{l("Update Avatar")}}</span>
-                </h4>
-                <button type="button" class="close" (click)="close()" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-                
-            </div>
-
-            <div class="modal-body">
-                <div class="row">
-                    <div class="col-md-12">
-                        <label>{{l("Avatar")}}</label>
-                        <div class="form-group form-md-line-input form-md-floating-label no-hint">
-                            <input type="text" name="image" class="form-control" [ngClass]="{'edited':user.image}" [(ngModel)]="user.image"> 
-                            <div class="text-center" [style]="'margin-top : 10px'">
-                                <input class="form-control" type="file" 
-                                    (change)="onFileSelected($event)">
-                            </div>      
+                                </div>
+                                <div style="margin-top: 15px;">
+                                    <div class="text-center ">
+                                        <!-- <h5>Crop Image</h5> -->
+                                        <image-cropper [imageChangedEvent]="imageChangedEvent"
+                                            [maintainAspectRatio]="true" [aspectRatio]=" 6 / 6" [resizeToWidth]="256"
+                                            format="png" [disabled]="true" [onlyScaleDown]="true" [roundCropper]="true"
+                                            (imageCropped)="imageCropped($event)" (imageLoaded)="imageLoaded()"
+                                            [transform]="transform" (cropperReady)="cropperReady()"
+                                            (loadImageFailed)="loadImageFailed()"></image-cropper>
+                                        <input type="range" id="vol" name="vol" min="0" max="5" [(ngModel)]="vol"
+                                            (change)="zoom()">
+                                    </div>
+                                    <!-- <div class="text-center ">
+                                        <h5>Preview</h5>
+                                        <img [src]="croppedImage" />
+                                    </div> -->
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="modal-footer">
-                <button
-                    [disabled]="saving"
-                    type="button"
-                    class="btn btn-default"
-                    (click)="close()"
-                >
-                    {{l("Cancel")}}
-                </button>
-                <button
-                    type="submit"
-                    class="btn btn-primary blue"
-                    [buttonBusy]="saving"
-                    [busyText]="l('SavingWithThreeDot')"
-                >
-                    <i class="fa fa-save"></i>
-                    <span>{{l("Save")}}</span>
-                </button>
-            </div>
-        </form>
+                <!-- <div class="card-body">
+                    <input type="range" id="vol" name="vol" min="0" max="5" [(ngModel)]="vol" (change)="zoom()">
+                    <input type="file" (change)="fileChangeEvent($event)" />
+                    <div class="row" style="margin-top: 15px;">
+                        <div class="text-center col-md-8">
+                            <h5>Crop Image</h5>
+                            <image-cropper [imageChangedEvent]="imageChangedEvent" [maintainAspectRatio]="true"
+                                [aspectRatio]=" 6 / 6" [resizeToWidth]="256" format="png" [disabled]="true"
+                                [onlyScaleDown]="true" [roundCropper]="true" (imageCropped)="imageCropped($event)"
+                                (imageLoaded)="imageLoaded()" [transform]="transform" (cropperReady)="cropperReady()"
+                                (loadImageFailed)="loadImageFailed()"></image-cropper>
+                        </div>
+                        <div class="text-center col-md-4">
+                            <h5>Preview</h5>
+                            <img [src]="croppedImage" />
+                        </div>
+                    </div>
+                </div> -->
+                <div class="modal-footer">
+                    <button [disabled]="saving" type="button" class="btn btn-default" (click)="close()">
+                        {{l("Cancel")}}
+                    </button>
+                    <button type="submit" class="btn btn-primary blue" [buttonBusy]="saving"
+                        [busyText]="l('SavingWithThreeDot')">
+                        <i class="fa fa-save"></i>
+                        <span>{{l("Save")}}</span>
+                    </button>
+                </div>
+            </form>
+        </div>
     </div>
 </div>
-</div>
-
-
